@@ -44,6 +44,10 @@ __RCSID("$NetBSD: init.c,v 1.11 1999/09/18 16:47:11 jsm Exp $");
 
 #include "extern.h"
 
+static int checkout __P((const char *));
+static const char *getutmp __P((void));
+static int wizard __P((const char *));
+
 void
 initialize(filename)
 	const char   *filename;
@@ -56,7 +60,7 @@ initialize(filename)
 	puts("Admiral D.W. Riggle\n");
 	location = dayfile;
 	srand(getpid());
-	getutmp(username);
+	username = getutmp();
 	wordinit();
 	if (filename == NULL) {
 		direction = NORTH;
@@ -77,17 +81,20 @@ initialize(filename)
 	signal(SIGINT, diesig);
 }
 
-void
-getutmp(uname)
-	char   *uname;
+static const char *
+getutmp()
 {
 	struct passwd *ptr;
 
 	ptr = getpwuid(getuid());
-	strncpy(uname, ptr ? ptr->pw_name : "", 8);
+	if (ptr == NULL)
+		return "";
+	else
+		return strdup(ptr->pw_name);
 }
 
-const char   *const list[] = {		/* hereditary wizards */
+/* Hereditary wizards.  A configuration file might make more sense. */
+static const char *const list[] = {
 	"riggle",
 	"chris",
 	"edward",
@@ -98,14 +105,14 @@ const char   *const list[] = {		/* hereditary wizards */
 	0
 };
 
-const char   *const badguys[] = {
+static const char *const badguys[] = {
 	"wnj",
 	"root",
 	"ted",
 	0
 };
 
-int
+static int
 wizard(uname)
 	const char   *uname;
 {
@@ -116,7 +123,7 @@ wizard(uname)
 	return flag;
 }
 
-int
+static int
 checkout(uname)
 	const char   *uname;
 {
